// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scopes render should correctly render component 1`] = `
<form class="scopes-form">
  <form-field-stub>
    <v-description-stub><strong>Foo</strong>
      application is requesting permission to access the following details from you. Press "Allow" if you would like to grant access to this information.
    </v-description-stub>
  </form-field-stub>
  <div class="form-field v-mb-24">
    <ul class="scopes-form-groups"></ul>
  </div>
  <form-controls-stub>
    <v-button-stub skin="primary" size="normal" fluid="true" type="primary" data-test="submit-button">
      Allow
    </v-button-stub>
  </form-controls-stub>
</form>
`;

exports[`Scopes render should render given scopes 1`] = `
<form class="scopes-form">
  <form-field-stub>
    <v-description-stub><strong>Foo</strong>
      application is requesting permission to access the following details from you. Press "Allow" if you would like to grant access to this information.
    </v-description-stub>
  </form-field-stub>
  <div class="form-field v-mb-24">
    <ul class="scopes-form-groups">
      <li class="scopes-form-group">
        <permission-group-stub rootscope="foo" scopes=""></permission-group-stub>
      </li>
      <li class="scopes-form-group">
        <permission-group-stub rootscope="bar" scopes=""></permission-group-stub>
      </li>
    </ul>
  </div>
  <form-controls-stub>
    <v-button-stub skin="primary" size="normal" fluid="true" type="primary" data-test="submit-button">
      Allow
    </v-button-stub>
  </form-controls-stub>
</form>
`;
